# espnet

./: .gitignore  README_JETS_TESTING.md  pyproject.toml  requirements.txt  requirements_jets_test.txt
.claude/: settings.local.json
.github/workflows/: jets-test-simple.yml  jets_japanese_test.yml
egs2/TEMPLATE/asr1/scripts/audio/: format_wav_scp.sh
egs2/TEMPLATE/tts1/: tts.sh
egs2/jsut/tts1/: README_JETS_ACCENT.md  run.sh  run_jets.sh
egs2/jsut/tts1/conf/tuning/: train_jets.yaml
egs2/jvs/tts1/conf/tuning/: train_jets.yaml
egs2/ljspeech/tts1/conf/tuning/: train_jets.yaml
egs2/moe/tts1/: run.sh
egs2/moe/tts1/conf/tuning/: train_jets.yaml
egs2/moe/tts1/local/: data.sh
espnet2/text/: phoneme_tokenizer.py
test/: test_japanese_g2p_local.py  test_jets_mini_training.sh
test/espnet2/gan_tts/jets/: test_jets_japanese.py
