[project]
name = "espnet-jets-tests"
version = "0.1.0"
description = "JETS Japanese TTS tests for ESPnet"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch>=1.13.0",
    "pytest>=6.0",
    "pytest-timeout>=2.0",
    "pyopenjtalk>=0.3.0",
    "jaconv>=0.3",
]

[project.optional-dependencies]
test = [
    "pytest-cov>=3.0",
    "pytest-xdist>=2.5",
    "flake8>=4.0",
    "black>=22.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test/espnet2/gan_tts/jets/test_jets_japanese.py",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]  # line too long
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"